# tg-autochat

./: .env.example  .gitignore  README.md  back_prompt.md  pyproject.toml
tg_autochat/: bot.py  config.py  llm.py  responder.py  storage.py  telegram.py
