[project]
name = "tg-autochat"
version = "0.1.0"
description = "Minimal Telegram Secretary Mode / business account autoresponder"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tg-autochat = "tg_autochat.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
